--- a/portfolio/templates/add_education.html
+++ b/portfolio/templates/add_education.html
@@ -1,7 +1,9 @@
 
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Add Education{% endblock %}
+<link rel="stylesheet" type="text/css" href="{% static 'form_styles.css' %}">
 
 {% block content %}
     <h2>Add Education</h2>
