--- a/portfolio/templates/about_me.html
+++ b/portfolio/templates/about_me.html
@@ -16,7 +16,7 @@
                 <li>I enjoy solving complex problems and building innovative solutions.</li>
                 <!-- Add more points about yourself -->
             </ul>
-            <a href="#portfolio" class="btn">View My Projects</a>
+            <a href="% url 'profile_1' %" class="btn">View My Works</a>
         </div>
     </section>
 {% endblock %}
