--- a/portfolio/templates/add_achievement.html
+++ b/portfolio/templates/add_achievement.html
@@ -1,7 +1,9 @@
 
 {% extends 'base.html' %}
+{% load  static %}
 
 {% block title %}Add Achievement{% endblock %}
+<link rel="stylesheet" type="text/css" href="{% static 'form_styles.css' %}">
 
 {% block content %}
     <h2>Add Achievements</h2>
