--- a/portfolio/templates/add_skill copy.html
+++ b/portfolio/templates/add_skill copy.html
@@ -1,7 +1,9 @@
 
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Add Skills{% endblock %}
+<link rel="stylesheet" type="text/css" href="{% static 'form_styles.css' %}">
 
 {% block content %}
     <h2>Add Skill</h2>
