--- a/static/style.css
+++ b/static/style.css
@@ -23,6 +23,8 @@ header {
     text-align: center;
 }
 
+
+
 nav ul {
     list-style: none;
 }
@@ -52,4 +54,50 @@ footer {
     width: 100%;
 }
 
-/* Add your additional styles here */
+h2 {
+    font-size: 24px;
+    color: #333;
+}
+
+form {
+    max-width: 600px;
+    margin: 20px auto;
+}
+
+label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+
+input[type="text"],
+input[type="date"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+a {
+    color: #3498db;
+    text-decoration: none;
+    transition: color 0.3s ease; /* Smooth transition effect for color change */
+}
+
+a:hover {
+    color: #31af2c;
+}
