--- a/portfolio/templates/profile.html
+++ b/portfolio/templates/profile.html
@@ -4,114 +4,20 @@
 
 {% block title %}{{ profile.full_name }} - {{ profile.title }}{% endblock %}
 
-<style>
-    body {
-        font-family: 'Arial', sans-serif;
-        background-color: #f7f7f7;
-        color: #333;
-        margin: 0;
-    }
-
-    .profile-section {
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 20px;
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .profile-header {
-        margin-bottom: 20px;
-    }
-
-    .profile-header h1 {
-        color: #3498db;
-    }
-
-    .profile-header h2 {
-        color: #555;
-    }
-
-    .profile-header p {
-        margin: 5px 0;
-    }
-
-    .overview {
-        margin-top: 15px;
-    }
-
-    .update-profile-link {
-        display: inline-block;
-        margin-top: 10px;
-        padding: 4px 4px;
-        background-color: #3498db;
-        color: #fff;
-        text-decoration: none;
-        border-radius: 4px;
-    }
-
-    .section-container {
-        margin-top: 20px;
-    }
-
-    h2 {
-        margin-bottom: 10px;
-        color: #555;
-    }
-
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-
-    li {
-        margin-bottom: 20px;
-    }
-
-    .update-link {
-        display: inline-block;
-        margin-top: 10px;
-        padding: 4px 4px;
-        background-color: #3498db;
-        color: #fff;
-        text-decoration: none;
-        border-radius: 4px;
-    }
-
-    .add-link {
-        display: inline-block;
-        margin-top: 10px;
-        padding: 4px 4px;
-        background-color: #2ecc71;
-        color: #fff;
-        text-decoration: none;
-        border-radius: 4px;
-    }
-
-    a {
-    color: #3498db;
-    text-decoration: none;
-    transition: color 0.3s ease; /* Smooth transition effect for color change */
-}
-
-a:hover {
-    color: #31af2c;
-}
-
-    /* Responsive design for smaller screens */
-    @media screen and (max-width: 600px) {
-        .profile-section {
-            padding: 10px;
-        }
-    }
-</style>
-
-
 {% block content %}
 
 <section class="profile-section">
-    <a href="#">Download</a><a href="{% url 'profile' %}"> Edit</a>
+ <a href="{% url 'profile_1' %}" style="
+    width: 10%;
+    padding: 0px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    text-align: center;
+        " 
+    > Edit</a> <button  id="downloadBtn" >Download PDF</button>
     <div class="profile-header">
         <h1>{{ profile.full_name }}</h1>
         <h2>{{ profile.title }}</h2>
@@ -199,4 +105,5 @@ a:hover {
         </ul>
     </div>
 </section>
+
 {% endblock %}
