--- a/static_files/style.css
+++ b/static_files/style.css
@@ -237,3 +237,65 @@ li {
     text-decoration: none;
     border-radius: 4px;
 }
+
+
+form {
+    width: 300px;
+    margin: 0 auto; /* Centering the form horizontally */
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Styling form labels */
+  label {
+    display: block;
+    margin-bottom: 10px;
+    color: #333; /* Adjust label color */
+  }
+  
+  /* Styling input fields */
+  input[type="text"],
+  input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 50px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
+  
+  /* Styling the submit button */
+  button[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  /* Hover effect on submit button */
+  button[type="submit"]:hover {
+    background-color: #0056b3;
+  }
+
+  .profile-section {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .section-container {
+    flex: 1 1 calc(50% - 20px); /* Adjust the width as needed */
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+  }
+
+  .error-message {
+    color: #c03333;
+  }
