--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -37,7 +37,7 @@
             <div class="contact-content">
                 <h2>Contact Me</h2>
                 <p>Ready to start a project together or have a question?</p>
-                <a href="#contact-form" class="btn">Get in Touch</a>
+                <a href="{% url 'contact' %}" class="btn">Get in Touch</a>
             </div>
         </section>
 
