--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -21,6 +21,11 @@
                 <li><a href="{% url 'about_me' %}">About Me</a></li>
                 <li><a href="{% url 'profile' %}">Profile</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
+                <a href="{% url 'contact' %}" class="btn" style="border: 1px;
+                border-style: solid;
+                border-radius: 30%;
+                
+                ">?</a>
                 {% else %}
                 <li><a href="/">Home</a></li>
                 <li><a href="{% url 'about_me' %}">About Me</a></li>
@@ -36,6 +41,7 @@
     </main>
 
     <footer>
+        <a href="{% url 'contact' %}" class="btn">Get in Touch</a>
         <p>&copy; 2024 Kanyesigye Samuel - All rights reserved.</p>
     </footer>
 
